Debug/nohup.out
  File "main.py", line 41
    if index > 9
               ^
SyntaxError: invalid syntax
